--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-titles"></div>
             <h1>Lydia Janike</h1>
-            <h2>Portfolio</h2>
+            <h2>Front-End Engineer</h2>
         </div>
         <nav>
             <ul>
@@ -24,8 +24,14 @@
         </nav>
     </header>
     <div class = "about">
-        <h3>About Me</h3>
-        <p>Hi, I'm Lydia Janike, a passionate web developer with a love for creating beautiful and functional websites. I specialize in front-end development and have experience with HTML, CSS, and JavaScript.</p>
+        <div class = "about-photo-wrapper">
+            <img src="img_3621.jpg" alt="Lydia Janike" class="profile-image">
+        </div>
+        <div class = "about-text">
+            <h3>Hi, I'm <div class= "name">Lydia Janike</div></h3>
+            <div class = "about-divider"></div>
+            <p>a passionate web developer, artist and designer with a love for creating beautiful things - whether that is achieved with a paintbrush, drawing tablet or keyboard. </p>
+        </div>
     </div>
     <div class="projects">
         <h3>My Projects</h3>
@@ -34,6 +40,8 @@
             <li><a href="project2.html">Project 2: E-commerce Site</a></li>
             <li><a href="project3.html">Project 3: Blog Platform</a></li>
         </ul>
+
+    </div>
     <footer>
      <p>&copy; 2025 Lydia Janike.</p>
     </footer>
