Added files to the directory

--- a/index.html
+++ b/index.html
@@ -36,18 +36,33 @@
             <div class="project-card">
                 <h4>Portfolio Website</h4>
              <p>A personal portfolio to showcase my work and skills.</p>
-                <a href="project1.html">View Project</a>
+                <a href="index.html">View Project</a>
           </div>
             <div class="project-card">
                 <h4>Instagram</h4>
                 <p>An online feed displaying my original art works.</p>
-                <a href="project2.html">View Page</a>
+                <a href="https://www.instagram.com/lydiajanike_art/" target="_blank" rel="noopener noreferrer">View Page</a>
             </div>
             <div class="project-card">
                 <h4>Etsy shop</h4>
                 <p>My small business selling art.</p>
-                <a href="project3.html">View Shop</a>
+                <a href="https://lydiajanikeart.etsy.com" target="_blank" rel="noopener noreferrer">View Shop</a>
             </div>
+        </div>
+        <div class="slideshow">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="img_3621.jpg" alt="Lydia Janike" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="img_3622.jpg" alt="Lydia Janike" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="img_3623.jpg" alt="Lydia Janike" class="slideshow-image">
+                </div>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
     </div>
     <footer>
