--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div class="about" id="about">
         <div class="about-photo-wrapper">
-            <img src="img_3621.jpg" alt="Lydia Janike" class="profile-image">
+            <img src="pictures/img_3621.jpg" alt="Lydia Janike" class="profile-image">
         </div>
         <div class = "about-text">
             <h3>Hi, I'm <div class= "name">Lydia Janike</div></h3>
@@ -52,21 +52,63 @@
         <div class="slideshow">
             <div class="slideshow-container">
                 <div class="mySlides fade">
-                    <img src="img_3621.jpg" alt="Lydia Janike" class="slideshow-image">
+                    <img src="pictures/Blowing Bubbles.jpg" alt="Kids blowings bubbles" class="slideshow-image">
                 </div>
                 <div class="mySlides fade">
-                    <img src="img_3622.jpg" alt="Lydia Janike" class="slideshow-image">
+                    <img src="Pictures/Colourful flowersss.jpg" alt="Colourful Flowers" class="slideshow-image">
                 </div>
                 <div class="mySlides fade">
-                    <img src="img_3623.jpg" alt="Lydia Janike" class="slideshow-image">
+                    <img src="pictures/Freckles in the sun.jpg" alt="Enjoying the sun" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="pictures/Funky chick.jpg" alt="Funky Chicken" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="pictures/Orange flowers.jpg" alt="Orange Flowers" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="pictures/puppy.jpg" alt="Puppy" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="pictures/kingfisher.jpg" alt="Kingfisher" class="slideshow-image">
+                </div>
+                <div class="mySlides fade">
+                    <img src="pictures/parrot.jpg" alt="Parrot" class="slideshow-image">
                 </div>
             </div>
+            <div class="slideshow-controls">
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
         </div>
     </div>
     <footer>
      <p>&copy; 2025 Lydia Janike.</p>
     </footer>
+
+    <script>
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function showSlides(n) {
+  const slides = document.getElementsByClassName("mySlides");
+  const slidesToShow = 5; // Number of images to show at once
+  if (slides.length === 0) return;
+  if (n > slides.length - slidesToShow + 1) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length - slidesToShow + 1}
+  for (let i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (let i = 0; i < slidesToShow; i++) {
+    if (slideIndex + i - 1 < slides.length) {
+      slides[slideIndex + i - 1].style.display = "block";
+    }
+  }
+}
+</script>
 </body>
 </html>
